# adventOfCode2020

./: Cargo.toml
input/: day13.txt  day4.txt
src/: bags.rs  bitmask.rs  ferry.rs  handheld.rs  main.rs  memory.rs  passport.rs  seats.rs  ship.rs  slope.rs  tickets.rs  xmas_cracker.rs
