[package]
name = "adventOfCode2020"
version = "0.1.0"
authors = ["Stephen Adams <stephen.adams@ing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
minilp = "0.2.2"
lp-modeler = "0.4.3"

[build]
rustflags = ["-C", "link-args=-L/home/lt93pj/Utils/cbc/lib"]